# pln

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.json  docker-compose.mainnet-prune.yaml  docker-compose.yaml  rust-toolchain.toml
.github/workflows/: docker_build.yaml  tags.yaml
entity/: Cargo.toml
migration/: Cargo.toml
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Runner/: Info-Debug.plist  Info-Release.plist  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: channel.dart  channelFund.dart  channel_fund.dart  constants.dart  grpc.dart  home.dart  main.dart  pln_appbar.dart  receive.dart  router.dart  send.dart  send_confirm.dart  send_status.dart  theme.dart
mobile/lib/data/: channel.dart  prefs.dart  send.dart
mobile/lib/screens/: channel.dart  channel_fund.dart  channel_status.dart  deposit.dart  error_page.dart  home.dart  receive.dart  send.dart  send_confirm.dart  send_status.dart  setup.dart  welcome.dart
mobile/lib/widgets/: background_button.dart  balance.dart  button.dart  key_value.dart  logo.dart  qr_scanner.dart  super_safe_area.dart  textField.dart  text_field.dart
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
plncore/: Cargo.toml
plncore/src/services/: manager.rs  mod.rs
plnentity/: Cargo.toml
plnmigration/: Cargo.toml
plnmigration/src/: main.rs
proto/: pln.proto
regtest/: config.json  sensei.db  sensei.db-shm  sensei.db-wal
src/: main.rs
src/grpc/: manager.rs  mod.rs
(+14 files in other folders)
