[package]
name = "pln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration", "plncore"]

[dependencies]
senseicore = { git = "https://github.com/L2-Technology/sensei", rev = "bb197d0a81533e17f1f3be1f020c8acc218436ae" }
signal-hook = "0.3.14"
bitcoin = "0.28.1"
axum = { version = "0.4.2", features = ["headers"] }
tower = { version = "0.4", features = ["full"] }
tokio = { version = "^1.0", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
env_logger = "0.9.0"
tonic = "0.6"
prost = "0.9"
pin-project = "1.0"
hyper = "0.14"
clap = { version = "3.0", features = [ "derive", "env" ] }
macaroon = "0.2"
tower-cookies = "0.4"
dirs = "4.0"
entity = { path = "entity" }
migration = { path = "migration" }
plncore = { path = "plncore" }
anyhow = "1.0.58"

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
