[package]
name = "plncore"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "plncore"
path = "src/lib.rs"

[dependencies]
rand = "0.8.4"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.0", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
macaroon = "0.2"
entity = { path = "../entity" }
migration = { path = "../migration" }
senseicore = { git = "https://github.com/L2-Technology/sensei", rev = "bb197d0a81533e17f1f3be1f020c8acc218436ae" }

[dev-dependencies]
bitcoind = { version = "0.26", features = [ "22_0" ] }
serial_test = "0.6.0"
